Bug 367730 - Modifier Meta key always opens launcher
Summary: Modifier Meta key always opens launcher
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-23 17:44 UTC by Alexandre Pereira
Modified: 2016-08-25 09:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Pereira 2016-08-23 17:44:13 UTC
Hi,

I am using openSUSE git/unstable branch, which track kde plasma git.

When using that desktop, pressing and releasing the modifier meta key ( also known by superkey ), the plasma launcher opens. I have window management key set to Meta ( where default is ALT ). 

When i move a window with the meta key + mouse, the plasma launcher also opens.

Reproducible: Always



Expected Results:  
The meta key to now open the launcher if another key or mouse is used ( similar to how ksuperkey used to work ).
Comment 1 Martin Flöser 2016-08-24 05:36:19 UTC
I have a pending review which should fix this problem: https://phabricator.kde.org/D2506
Comment 2 Alexandre Pereira 2016-08-24 08:43:39 UTC
Thanks !

Will close the bug as soon as I see it fixed on the unstable/git packages. Is that OK ?
Comment 3 Martin Flöser 2016-08-25 09:48:19 UTC
Git commit 9c5f972c6a5a8f0ebd06db3249d8edd1ace7686c by Martin Gräßlin.
Committed on 25/08/2016 at 09:47.
Pushed by graesslin into branch 'master'.

Forward x11 raw pointer buttons to PointerInputRedirection

Summary:
The raw pointer button events intercepted in the XInput2 input filter
get sent through the Platform to the PointerInputRedirection. This
makes the PointerInputRedirection track the pointer button state and
emit the signals for button changed and axis changed.

These signals are used by the modifier-only shortcut detection to
determine whether the shortcut should trigger.

On X11 the "normal" input handling doesn't use the InputRedirection
and the emitted signals are not consumed by anything else. As
PointerInputRedirection is not inited the events are not forwarded
to the input filter, thus won't be processed by other parts and
won't interfere with the normal event processing on X11.

Given that it also doesn't matter that the input filter does not
apply the left-handed setting. The internal tracking will have a
wrong mouse button, but nothing is going to do decisions based on
the value of the pressed mouse button. For the moment all we are
interested in is that a button is pressed.

Test Plan:
Pressed meta, clicked, scrolled, released meta: launcher
did not open. Pressed meta, released meta: launcher opened

Reviewers: #kwin, #plasma

Subscribers: plasma-devel, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D2506

M  +58   -0    plugins/platforms/x11/standalone/xinputintegration.cpp
M  +6    -4    pointer_input.cpp

http://commits.kde.org/kwin/9c5f972c6a5a8f0ebd06db3249d8edd1ace7686c